# models/models.go
@@ -1,6 +1,6 @@
 package models
 
-type Product struct {
+type Person struct {
 	ID          string `json:"id"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
